--- a/style.css
+++ b/style.css
@@ -192,6 +192,78 @@ header {
     font-size: 16px;
 }
 
+/* Container de Login */
+.login-container {
+    max-width: 400px;
+    margin: 50px auto;
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+h2 {
+    color: #426544;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.input-group {
+    margin-bottom: 20px;
+}
+
+.input-group label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.input-group input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+/* Estilo para ícones sociais */
+.social-icons {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.social-icons img {
+    width: 40px;
+    margin: 0 10px;
+    cursor: pointer;
+}
+
+#entrar {
+    display: block;
+    text-align: center;
+    padding: 10px;
+    background-color: #426544;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+#entrar:hover {
+    background-color: #69996c;
+}
+
+.signup-link {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.signup-link a {
+    color: #69996c;
+    text-decoration: none;
+}
+
+.signup-link a:hover {
+    text-decoration: underline;
+}
+
 footer {
     background-color: #426544;
     padding: 5px;
